--- a/server/package.json
+++ b/server/package.json
@@ -14,22 +14,32 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/cors": "^2.8.12",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/connect-redis": "^0.0.23",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.10",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.12",
     "jest": "^27.4.5",
     "nodemon": "^2.0.15",
     "ts-jest": "^27.1.1",
     "ts-node": "^10.4.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
     "apollo-server-express": "^3.5.0",
+    "bcryptjs": "^2.4.3",
+    "class-validator": "^0.14.1",
+    "connect-redis": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.3",
     "graphql": "^15.5.0",
+    "ioredis": "^5.3.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
