--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.5.0",
+    "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.1",
     "connect-redis": "^7.1.0",
